--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Recyclify</title>
+    <title>TRC</title>
   </head>
   <body>
     <div id='root'> </div>
